...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appActivities.CourseSelectionActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <TextView
        android:id="@+id/txt_tempWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
        android:layout_below="@+id/app_bar"
        android:text="@string/courseSelection_welcome"
        android:textSize="20dp"
        android:textColor="@color/darkBlue" />

    <Spinner
        android:id="@+id/spinnerSchoolOf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_below="@id/txt_tempWelcome"
        />
    <Spinner
        android:id="@+id/spinnerIT_Programmes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_below="@id/spinnerSchoolOf"
        />
    <Spinner
        android:id="@+id/spinnerIT_BIT_Year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_below="@id/spinnerIT_Programmes"
        />
    <Spinner
        android:id="@+id/spinnerIT_BIT_year2_Course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_below="@id/spinnerIT_BIT_Year"
        />

    <Button
        android:id="@+id/btnAddCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@id/spinnerIT_BIT_year2_Course"
        android:layout_centerHorizontal="true"
        android:text="@string/add_course_name" />
...
